--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience &nbsp&nbsp&nbsp <i class="fas fa-briefcase"></i> </h2>
+           
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Information Technology Project Officer</h3>
+              <div class="subheading mb-3">The Bank Of Jamaica </div>
+              <p> Initiating, Developing, Deploying and Maintaining various web applications; these are generally done on the .NET platform </p>
+              <p> As a member of the Applications team 1, it is my duty to maintain mission critical applications such as those used in the
+              banking field. These applications require inteeraction with application servers servers such as Websphere.</p>
+              <p> I am also responsible for installing, upgrading, maintaining various Modelling and Research software used by the Economists 
+              at the central bank. </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary"> May 2019 – Present </span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
