--- a/index.html
+++ b/index.html
@@ -306,6 +306,26 @@
         <div class="my-auto">
           <h2 class="mb-5">Projects &nbsp&nbsp&nbsp <i class="far fa-folder-open"></i> </h2>
 
+           <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"> Electronic Mail Tracking System (EMTRACK) </h3>
+              div class="subheading mb-3">Client(s): Bank of Jamaica; Facilities Management Department </div>
+              <div class="subheading mb-3">Role(s): Software Development , Implementation and Testing </div>
+              <div class="subheading mb-3">Technologies(s): .NET Web Application and .NET Xamarin Mobile App </div>
+              <p> This application is intended for use by the general staff and more specifically the facilities management department. 
+              The system provides a means to digitally record, track and process Mail request for delivery internally and externally at the Central bank.
+             The Web Applicaiton generates barcodes as well and also provides SSRS reports to the Managers in the system. </p>
+
+              <p> The Mobile Applicaiton side of the platform is used by the porters to update the status of each mail request as well as 
+                providing a general tool for them to keep track of all the pickups and dropoofs in the system. The mobile applcation has
+                a barcode scannning feature which makes it easier to identify the respective Mail records(request). </p>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">June 2019 – June 2020</span>
+            </div>
+          </div>
+          
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">"Bus" and Passenger Tracking and Automated System"</h3>
