--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
            <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0"> Electronic Mail Tracking System (EMTRACK) </h3>
-              div class="subheading mb-3">Client(s): Bank of Jamaica; Facilities Management Department </div>
+              <div class="subheading mb-3">Client(s): Bank of Jamaica; Facilities Management Department </div>
               <div class="subheading mb-3">Role(s): Software Development , Implementation and Testing </div>
               <div class="subheading mb-3">Technologies(s): .NET Web Application and .NET Xamarin Mobile App </div>
               <p> This application is intended for use by the general staff and more specifically the facilities management department. 
