--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="subheading mb-3">The Bank Of Jamaica </div>
               <p> Initiating, Developing, Deploying and Maintaining various web applications; these are generally done on the .NET platform </p>
               <p> As a member of the Applications team 1, it is my duty to maintain mission critical applications such as those used in the
-              banking field. These applications require inteeraction with application servers servers such as Websphere.</p>
+              banking field. These applications require inteeraction with application servers such as IBM Websphere Application Server.</p>
               <p> I am also responsible for installing, upgrading, maintaining various Modelling and Research software used by the Economists 
               at the central bank. </p>
             </div>
